[package]
name = "proxy_keylogger"
version = "0.1.0"
authors = ["maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.13.0"
hyper-rustls = "0.22.1"